add_subdirectory(LRUCache)
add_subdirectory(memcpy)
add_subdirectory(memory_allocator)
add_subdirectory(power_of_2_check)
add_subdirectory(align)
add_subdirectory(count_set_bits)
add_subdirectory(find_single_number)
add_subdirectory(register_toggle)
add_subdirectory(reverse_bits)
add_subdirectory(ring_buffer)